--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "css-loader": "^1.0.0",
     "deep-copy": "^1.4.2",
     "file-loader": "^2.0.0",
+    "glob": "^7.1.4",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.7.0",
     "style-loader": "^0.23.1",
