--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
   },
   "repository": {
     "type": "git",
@@ -38,5 +38,8 @@
     "uglifyjs-webpack-plugin": "^2.0.1",
     "vue-loader": "^15.7.0",
     "webpack": "^4.35.3"
+  },
+  "devDependencies": {
+    "conventional-changelog-cli": "^2.0.21"
   }
 }
