--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
+    "sprites-loader": "^0.8.2",
     "style-loader": "^0.23.1",
     "thread-loader": "^2.1.2",
     "uglifyjs-webpack-plugin": "^2.0.1",
