--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "thread-loader": "^2.1.2",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "vue-loader": "^15.7.0",
-    "webpack": "^4.35.3"
+    "webpack": "^4.35.3",
+    "webpack-subresource-integrity": "^1.3.2"
   },
   "devDependencies": {
     "conventional-changelog-cli": "^2.0.21"
