--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "sprites-loader": "^0.8.2",
@@ -42,6 +43,7 @@
     "webpack-subresource-integrity": "^1.3.2"
   },
   "devDependencies": {
-    "conventional-changelog-cli": "^2.0.21"
+    "conventional-changelog-cli": "^2.0.21",
+    "cssnano": "^4.1.10"
   }
 }
