--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
     "deep-copy": "^1.4.2",
+    "express": "^4.17.1",
     "file-loader": "^2.0.0",
     "glob": "^7.1.4",
     "html-webpack-plugin": "^3.2.0",
@@ -40,6 +41,8 @@
     "uglifyjs-webpack-plugin": "^2.0.1",
     "vue-loader": "^15.7.0",
     "webpack": "^4.35.3",
+    "webpack-dev-middleware": "^3.7.0",
+    "webpack-hot-middleware": "^2.25.0",
     "webpack-subresource-integrity": "^1.3.2"
   },
   "devDependencies": {
