--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+    "test": "node ./test/template-project/index.js"
   },
   "repository": {
     "type": "git",
@@ -47,6 +48,7 @@
   },
   "devDependencies": {
     "conventional-changelog-cli": "^2.0.21",
-    "cssnano": "^4.1.10"
+    "cssnano": "^4.1.10",
+    "rimraf": "^3.0.0"
   }
 }
